chore: badge alignment fixed section padding fixed pending: use grid layout for badges instead of flex

--- a/src/styles/_commons.scss
+++ b/src/styles/_commons.scss
@@ -21,3 +21,7 @@
 .opacity-7 {
     opacity: 0.7;
 }
+
+.justify-space-evenly {
+    justify-content: space-evenly;
+}
